Changed navigation links and introduction pics

--- a/ice-cream-shop-website-template/index.html
+++ b/ice-cream-shop-website-template/index.html
@@ -97,7 +97,7 @@
 
 
     <!-- Carousel Start -->
-    <div class="container-fluid p-0 mb-5 pb-5">
+    <!-- <div class="container-fluid p-0 mb-5 pb-5">
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -132,7 +132,7 @@
                 </div>
             </a>
         </div>
-    </div>
+    </div> -->
     <!-- Carousel End -->
 
 
